--- a/Javascript/project_2.html
+++ b/Javascript/project_2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Javascript functions</title>
-    <script src="function1.js"></script>
+    <script src="project_2.js"></script>
 </head>
 <body>
 
